--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ before_install:
 script:
   - go build ./cmd/speedtest-cli
   - go test -race -coverprofile=dot.cov -covermode=atomic .
-  - go test -race -coverprofile=geo.cov -covermode=atomic geo
-  - go test -race -coverprofile=prober.cov -covermode=atomic prober
+  - go test -race -coverprofile=geo.cov -covermode=atomic ./geo
+  - go test -race -coverprofile=prober.cov -covermode=atomic ./prober
 
 after_success:
   - cat dot.cov geo.cov prober.cov > coverage.txt
