--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ pipeline:
   build:
     image: golang:latest
     commands:
-      - go get ./...
+      - go get -t ./...
       - go test ./...
       - go build ./...
 
