--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -28,18 +28,7 @@ builds:
       - arm64
 
 archives:
-  - format: tar.gz
-    name_template: >-
-      {{ .ProjectName }}_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else if eq .Arch "386" }}i386
-      {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
-    # use zip for windows archives
-    format_overrides:
-      - goos: windows
-        format: zip
+  - format: binary
 
 changelog:
   sort: asc
@@ -48,58 +37,20 @@ changelog:
       - "^docs:"
       - "^test:"
 
-dockers:
-- image_templates:
-  - 'ghcr.io/fopina/{{.ProjectName}}:{{ .Tag }}-amd64'
-  dockerfile: Dockerfile
-  use: buildx
-  build_flag_templates:
-  - "--pull"
-  - "--label=io.artifacthub.package.license=MIT"
-  - "--label=org.opencontainers.image.created={{.Date}}"
-  - "--label=org.opencontainers.image.name={{.ProjectName}}"
-  - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-  - "--label=org.opencontainers.image.version={{.Version}}"
-  - "--label=org.opencontainers.image.source={{.GitURL}}"
-  - "--platform=linux/amd64"
-- image_templates:
-  - 'ghcr.io/fopina/{{.ProjectName}}:{{ .Tag }}-arm64'
-  dockerfile:  Dockerfile
-  use: buildx
-  build_flag_templates:
-  - "--pull"
-  - "--label=io.artifacthub.package.license=MIT"
-  - "--label=org.opencontainers.image.created={{.Date}}"
-  - "--label=org.opencontainers.image.name={{.ProjectName}}"
-  - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-  - "--label=org.opencontainers.image.version={{.Version}}"
-  - "--label=org.opencontainers.image.source={{.GitURL}}"
-  - "--platform=linux/arm64"
-  goarch: arm64
-- image_templates:
-  - 'ghcr.io/fopina/{{.ProjectName}}:{{ .Tag }}-armv7'
-  dockerfile:  Dockerfile
-  use: buildx
-  build_flag_templates:
-  - "--pull"
-  - "--label=io.artifacthub.package.license=MIT"
-  - "--label=org.opencontainers.image.created={{.Date}}"
-  - "--label=org.opencontainers.image.name={{.ProjectName}}"
-  - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-  - "--label=org.opencontainers.image.version={{.Version}}"
-  - "--label=org.opencontainers.image.source={{.GitURL}}"
-  - "--platform=linux/arm/v7"
-  goarch: arm
-  goarm: '7'
-
-docker_manifests:
-- name_template: 'ghcr.io/fopina/{{.ProjectName}}:{{ .Tag }}'
-  image_templates:
-  - 'ghcr.io/fopina/{{.ProjectName}}:{{ .Tag }}-amd64'
-  - 'ghcr.io/fopina/{{.ProjectName}}:{{ .Tag }}-arm64'
-  - 'ghcr.io/fopina/{{.ProjectName}}:{{ .Tag }}-armv7'
-- name_template: 'ghcr.io/fopina/{{.ProjectName}}:latest'
-  image_templates:
-  - 'ghcr.io/fopina/{{.ProjectName}}:{{ .Tag }}-amd64'
-  - 'ghcr.io/fopina/{{.ProjectName}}:{{ .Tag }}-arm64'
-  - 'ghcr.io/fopina/{{.ProjectName}}:{{ .Tag }}-armv7'
+dockers_v2:
+  - images:
+      - ghcr.io/fopina/{{.ProjectName}}
+    tags:
+      - '{{ .Version }}'
+      - "{{ if not .IsNightly }}latest{{ end }}"
+    labels:
+      "io.artifacthub.package.license": "MIT"
+      "org.opencontainers.image.created": "{{.Date}}"
+      "org.opencontainers.image.name": "{{.ProjectName}}"
+      "org.opencontainers.image.revision": "{{.FullCommit}}"
+      "org.opencontainers.image.version": "{{.Version}}"
+      "org.opencontainers.image.source": "{{.GitURL}}"
+    platforms:
+      - linux/amd64
+      - linux/arm64
+      - linux/arm/v7
