--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -28,8 +28,18 @@ builds:
       - arm64
 
 archives:
-  - formats:
-      - binary
+  - format: tar.gz
+    name_template: >-
+      {{ .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
+    # use zip for windows archives
+    format_overrides:
+      - goos: windows
+        format: zip
 
 changelog:
   sort: asc
