--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -32,6 +32,7 @@ jobs:
           path: |
             dist/**/*.zip
             dist/**/*.tar.gz
+          if-no-files-found: error
 
       - name: Sanitize branch name
         id: sanitize_branch
