--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -28,18 +28,16 @@ builds:
       - arm64
 
 archives:
-  - format: tar.gz
+  - formats: tar.gz
     name_template: >-
       {{ .ProjectName }}_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else if eq .Arch "386" }}i386
-      {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
+      {{- .Os }}_
+      {{- .Arch }}
+      {{- if .Arm }}_v{{ .Arm }}{{ end }}
     # use zip for windows archives
     format_overrides:
-      - goos: windows
-        format: zip
+      - formats: zip
+        goos: windows
 
 changelog:
   sort: asc
