--- a/.github/actions/release/action.yml
+++ b/.github/actions/release/action.yml
@@ -6,7 +6,11 @@ inputs:
     default: ''
   github-token:
     description: 'Token to login to GHCR and pull image - steps skipped if not provided'
-    default: ''  
+    default: ''
+outputs:
+  version:
+    description: "Released version"
+    value: ${{ steps.get_version.outputs.version }}
 runs:
   using: "composite"
   steps:
@@ -39,15 +43,13 @@ runs:
         GITHUB_TOKEN: ${{ inputs.github-token }}
 
     - name: Print released version
+      id: get_version
       shell: bash
       run: |
         if [ "${{ steps.goreleaser.outputs.metadata }}" ]; then
           VERSION=$(jq -r '.version' <<< '${{ steps.goreleaser.outputs.metadata }}')
           echo "Released version: $VERSION"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
         else
           echo "No release metadata available"
         fi
-    
-    - name: test
-      shell: bash
-      run: echo "Test step completed"
