--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -21,9 +21,15 @@ jobs:
         uses: actions/checkout@v4
 
       - uses: ./.github/actions/release
+        id: release
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           flags: --snapshot
+      
+      - name: Print released version
+        shell: bash
+        run: |
+          echo '${{ steps.release.outputs.version }}')
 
       - name: Upload assets
         uses: actions/upload-artifact@v4
