--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Print released version
         shell: bash
         run: |
-          echo '${{ steps.release.outputs.version }}')
+          echo '${{ steps.release.outputs.version }}'
 
       - name: Upload assets
         uses: actions/upload-artifact@v4
