--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -25,11 +25,6 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           flags: --snapshot
-      
-      - name: Print released version
-        shell: bash
-        run: |
-          echo '${{ steps.release.outputs.version }}'
 
       - name: Upload assets
         uses: actions/upload-artifact@v4
@@ -71,5 +66,6 @@ jobs:
       - name: Show summary
         if: startsWith(github.head_ref, 'dev/')
         run: |
+          echo 'Snapshot: ${{ steps.release.outputs.version }}  ' >> ${GITHUB_STEP_SUMMARY}
           echo 'Published:  ' >> ${GITHUB_STEP_SUMMARY}
           echo '* `ghcr.io/${{ github.repository }}:dev-${{ steps.sanitize_branch.outputs.sanitized_branch }}`' >> ${GITHUB_STEP_SUMMARY}
