--- a/.github/workflows/publish-main.yml
+++ b/.github/workflows/publish-main.yml
@@ -25,11 +25,12 @@ jobs:
         uses: actions/checkout@v4
 
       - uses: ./.github/actions/release
+        id: release
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Show summary
         run: |
           echo 'Published:  ' >> ${GITHUB_STEP_SUMMARY}
-          echo '* `ghcr.io/${{ github.repository }}:${{ github.ref_name }}`' >> ${GITHUB_STEP_SUMMARY}
+          echo '* `ghcr.io/${{ github.repository }}:${{ steps.release.outputs.version }}`' >> ${GITHUB_STEP_SUMMARY}
           echo '* `ghcr.io/${{ github.repository }}:latest`' >> ${GITHUB_STEP_SUMMARY}
