--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -28,16 +28,7 @@ builds:
       - arm64
 
 archives:
-  - formats: tar.gz
-    name_template: >-
-      {{ .ProjectName }}_
-      {{- .Os }}_
-      {{- .Arch }}
-      {{- if .Arm }}_v{{ .Arm }}{{ end }}
-    # use zip for windows archives
-    format_overrides:
-      - formats: zip
-        goos: windows
+  - formats: binary
 
 changelog:
   sort: asc
