--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,10 +6,10 @@ before:
 
 builds:
   - id: linux-arm7
-    main: ./cmd/speedtest-cli
+    main: ./cmd/cli
     env:
       - CGO_ENABLED=0
-    ldflags: -s -w -X main.version={{ .Version }}
+    ldflags: -s -w -X github.com/fopina/speedtest-cli/version.Version={{ .Version }}
     goos:
       - linux
     goarch:
@@ -17,10 +17,10 @@ builds:
     goarm:
       - '7'
   - id: cross
-    main: ./cmd/speedtest-cli
+    main: ./cmd/cli
     env:
       - CGO_ENABLED=0
-    ldflags: -s -w -X main.version={{ .Version }}
+    ldflags: -s -w -X github.com/fopina/speedtest-cli/version.Version={{ .Version }}
     goos:
       - linux
       - windows
